# aiida-gaussian

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  .travis.yml  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.json  setup.py
.github/: check_version.py
.github/workflows/: build.yml  ci.yml  publish.yml  pypi-publish.yml
aiida_gaussian/: __init__.py  calculations.py  cli.py  parsers.py  version.py
aiida_gaussian/calculations/: __init__.py  cubegen.py  formchk.py  gaussian.py
aiida_gaussian/data/: __init__.py
aiida_gaussian/parsers/: __init__.py  cubegen.py  gaussian.py
aiida_gaussian/tests/: __init__.py  conftest.py  test_calculations.py  test_cli.py  test_gaussian.py
aiida_gaussian/tests/calculations/: test_gaussian.py
aiida_gaussian/tests/calculations/test_gaussian/: test_parameters_gen_basis.in
aiida_gaussian/tests/data/: PtH.xyz  gaussian_test.inp
aiida_gaussian/tests/input_files/: file2.txt
aiida_gaussian/tests/parsers/: test_base.py
aiida_gaussian/tests/parsers/fixtures/base/nan_inf/: aiida.out
aiida_gaussian/tests/parsers/test_base/: test_nan_inf.yml
aiida_gaussian/utils/: __init__.py  cube.py  parser.py
aiida_gaussian/workchains/: __init__.py  base.py  cubes.py  gaussian_cubes_workchain.py
docs/source/: conf.py  index.rst  rtd_settings.py
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst  index.rst
examples/: c2h6.xyz  ch4_optgem.py  example_01.py  example_01_opt.py  example_01_opt_and_triplet.py  example_01_opt_n_pop.py  example_02_output_wfx.py  example_03_base_workflow.py  example_04_nmr_nics.py  example_LSF.py  example_cubegen.py  example_cubegen_LSF.py  example_cubes_workchain.py  example_formchk.py  example_formchk_LSF.py  example_gaussian_LSF.py  naphthalene_nics.xyz  p-quinodimethane.xyz
tests/: __init__.py  conftest.py
tests/calculations/: test_gaussian.py
tests/data/: ch4.xyz
tests/parsers/: test_base.py
tests/parsers/test_base/: test_nan_inf.yml
utils/: check_version.py
